# tackletek-video-pipeline

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt  setup.cfg
scripts/: com.tackletek.video-pipeline.plist  run_scheduled.sh
src/pipeline/: __init__.py  cli.py  config.py  events.py  ingest.py  process.py  registry.py  scanner.py  sync.py
tests/: make_fixture_video.py  test_ingest.py
