[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tackletek-video-pipeline"
version = "0.1.0"
description = "Google Drive video ingestion and TackleTek analysis orchestrator"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "gdown>=5.0",
    "opencv-python>=4.8",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
tvp = "pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
