[metadata]
name = tackletek-video-pipeline
version = 0.1.0
description = Google Drive video ingestion and TackleTek analysis orchestrator
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    gdown>=5.0
    opencv-python>=4.8
    pyyaml>=6.0

[options.extras_require]
dev =
    pytest>=7.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    tvp = pipeline.cli:main
